tests/rt/pos/ifc/declenoughauthority.trp
let val x = 42 raisedTo `<alice;#root-integrity>`
    val y = declassify (x, authority, `{}` )
in y 
end