tests/rt/neg/ifc/notenoughauthority.trp
let val x = 42 raisedTo `<alice;#root-integrity>`
    val authAlice = attenuate (authority, `<bob;#root-integrity>`)
    val y = declassify (x, authAlice, `{}`)
in y 
end